# set-scraper

./: .gitignore  main.py  pyproject.toml  rembg.py  requirements.txt  resize.py  scrape.py
download/: downloader.py
processing/: static.py
set_scraper/: removebg.py  resize.py  scrape.py
set_scraper/download/: downloader.py
set_scraper/processing/: static.py
set_scraper/websites/: bunkr.py  cup2d.py  sc.py  vg.py
websites/: sc.py
